added meta tags to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta property="og:title" content="CRWN CLOTHING"/>
+    <meta property="og:url" content="https://crwn-live-aaronbadilla.herokuapp.com/" />
+    <meta property="og:description" content="CRWN CLOTHING is a site built by Aaron Badilla as a part of the ZeroToMastery Complete React Developer Course">
+    <meta property="og:image" content="%PUBLIC_URL%/crwn-clothing-screenshot.png"/>
+    <meta property="og:type" content="Information" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
     <title>CRWN CLOTHING</title>
   </head>
   <body>
